+Добавил кросспотоковость (базовый уровень) *Поправил кроссплатформу (VS включительно) *Подбил баг...удалил баг..жизнь продолжается.
Signed-off-by: DemonSinusa <tonich89@gmail.com>

--- a/XTcpSocket.cbp
+++ b/XTcpSocket.cbp
@@ -70,6 +70,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="TCPServer.h" />
+		<Unit filename="Threads.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Threads.h" />
 		<Unit filename="XSocket.h" />
 		<Extensions>
 			<envvars />
