--- a/XTcpSocket.cbp
+++ b/XTcpSocket.cbp
@@ -54,6 +54,16 @@
 					<Add option="-DDEBUG" />
 				</Compiler>
 			</Target>
+			<Target title="EchoMultiCuster">
+				<Option output="bin/EchoMultiCuster/XTcpSocket" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/EchoMultiCuster/" />
+				<Option object_output="obj/EchoMultiCuster/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+				</Compiler>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
