+Наконец то ЗАРАБОТАЛО! *Выяснилось, что потоки не так просты как хотелось бы закроссать +Множественная реорганизация кодов в поисках своей ошибки привела к пониманию потоковости)
Signed-off-by: DemonSinusa <tonich89@gmail.com>

--- a/XTcpSocket.cbp
+++ b/XTcpSocket.cbp
@@ -14,7 +14,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add option="-DDEBUG" />
+					<Add option="-D_DEBUG" />
 				</Compiler>
 			</Target>
 			<Target title="alib">
@@ -51,7 +51,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add option="-DDEBUG" />
+					<Add option="-D_DEBUG" />
 				</Compiler>
 			</Target>
 			<Target title="EchoMultiCuster">
