--- a/Example/Example.cbp
+++ b/Example/Example.cbp
@@ -7,7 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Example" prefix_auto="1" extension_auto="1" />
+				<Option output="../../$(PROJECT_NAME)" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -19,7 +20,8 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Example" prefix_auto="1" extension_auto="1" />
+				<Option output="../../$(PROJECT_NAME)" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
